<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_activity">About</string>
    <string name="action_configuration">Configure Robot</string>
    <string name="action_exit_app">Exit</string>
    <string name="action_restart_robot">Restart Robot</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifi_channel_selector">Wifi Channel Selection</string>
    <string name="add_motor_controller_menu_item">Add Motor Controller</string>
    <string name="add_servo_controller_menu_item">Add Servo Controller</string>
    <string name="app_name">FTC Driver Station</string>
    <string name="attached">Attached</string>
    <string name="autoconfigure">AutoConfigure</string>
    <string name="autoconfigureLaunch_text">Press this button to use the AutoConfigure tool</string>
    <string name="autoconfigure_menu_item">AutoConfigure</string>
    <string name="cancel">Cancel</string>
    <string name="choice_prompt">Which sensor is attached?</string>
    <string name="choice_prompt_analogInput">Which sensor is attached?</string>
    <string name="choice_prompt_analogOutput">Which sensor is attached?</string>
    <string name="choice_prompt_digital_device">Which sensor is attached?</string>
    <string name="choice_prompt_i2c">Which sensor is attached?</string>
    <string name="configure_activity">Configure Robot</string>
    <string name="configure_menu_item">Configure Robot</string>
    <string name="configure_settings">Configure</string>
    <string name="default_port">0</string>
    <string name="device_info">Device Info</string>
    <string name="device_type">Device Types</string>
    <string name="dialog_title_select_op_mode">Select Op Mode</string>
    <string name="done_button">Done</string>
    <string name="edit_analog_input_devices_activity">Edit Analog Input Devices</string>
    <string name="edit_analog_output_devices_activity">Edit Analog Output Devices</string>
    <string name="edit_controller">Edit Controller</string>
    <string name="edit_core_device_interface_module_controller_activity">Edit Core Device Interface Module Controller</string>
    <string name="edit_digital_devices_activity">Edit Digital Devices</string>
    <string name="edit_i2c_devices_activity">Edit I2c Devices</string>
    <string name="edit_legacy_module_controller_activity">Edit Legacy Module Controller</string>
    <string name="edit_matrix_controller_activity">Edit Matrix Controller</string>
    <string name="edit_motor_controller_activity">Edit Motor Controller</string>
    <string name="edit_motor_controller_menu_item">Edit Motor Controller</string>
    <string name="edit_pwm_devices_activity">Edit PWM Devices</string>
    <string name="edit_servo_controller_activity">Edit Servo Controller</string>
    <string name="file_activate_button">Activate</string>
    <string name="file_delete_button">Delete</string>
    <string name="file_edit_button">Edit</string>
    <string name="file_prompt">Choose Configuration File</string>
    <string name="filename_editText">Filename</string>
    <string name="gamepad_android_standard">Standard Android Gamepad</string>
    <string name="gamepad_default">@string/gamepad_logitech_f310</string>
    <string name="gamepad_logitech_f310">Logitech F310 Gamepad</string>
    <string name="gamepad_microsoft_xbox_360">Microsoft XBox 360 Gamepad</string>
    <string name="input_name_hint">Enter device name here</string>
    <string name="input_name_label">Device name</string>
    <string name="k9LegacyBot">K9LegacyBot</string>
    <string name="k9USBBot">K9USBBot</string>
    <string name="label_current_op_mode">current op mode:</string>
    <string name="label_loading_op_mode">Loading...</string>
    <string name="label_queued_op_mode">queued:</string>
    <string name="label_select">Select Op Mode</string>
    <string name="label_start">Start</string>
    <string name="label_start_timed">Start w/ Timer</string>
    <string name="label_stop">Stop</string>
    <string name="launch_wifi_settings">Launch WiFi Settings</string>
    <string name="legacy_controller_name">Enter the name for this legacy module here</string>
    <string name="load_menu_item">Load Configuration File</string>
    <string name="matrix_controller_name">Matrix Controller</string>
    <string name="matrix_controller_name_prompt">Enter the name for this matrix controller here</string>
    <string name="matrix_motor_title">Motors</string>
    <string name="matrix_name_prompt">Matrix name</string>
    <string name="matrix_port0">1</string>
    <string name="matrix_port1">2</string>
    <string name="matrix_port2">3</string>
    <string name="matrix_port3">4</string>
    <string name="matrix_port4">1</string>
    <string name="matrix_port5">2</string>
    <string name="matrix_port6">3</string>
    <string name="matrix_port7">4</string>
    <string name="matrix_servo_title">Servos</string>
    <string name="motor_controller_name">Motor Controller</string>
    <string name="motor_controller_name_text">Enter the name for this motor controller here</string>
    <string name="motor_name">Enter motor name</string>
    <string name="motor_name_prompt">Motor name</string>
    <string name="motor_port1">1</string>
    <string name="motor_port2">2</string>
    <string name="name_prompt_text">Enter name</string>
    <string name="name_prompt_undertext">Device name</string>
    <string name="pair_instructions">Make sure that the FTC Robot Controller app is open on your other device, and that both devices have wifi enabled</string>
    <string name="pair_wifi_direct">Pair With Robot Controller</string>
    <string name="pair_wifi_direct_menu_item">Pair With Robot Controller</string>
    <string name="ping_label">Ping:</string>
    <string name="port">Port</string>
    <string name="pref_change_wifi_channel">Change Wifi Channel</string>
    <string name="pref_configure_robot_title">Robot Configuration Settings</string>
    <string name="pref_driver_station_mac">pref_driver_station_mac</string>
    <string name="pref_driver_station_mac_default">NONE</string>
    <string name="pref_gamepad_title">Gamepad</string>
    <string name="pref_gamepad_user1_type_key">pref_gamepad_user1_type</string>
    <string name="pref_gamepad_user1_type_title">Gamepad 1 type</string>
    <string name="pref_gamepad_user2_type_key">pref_gamepad_user2_type</string>
    <string name="pref_gamepad_user2_type_title">Gamepad 2 type</string>
    <string name="pref_hardware_config_filename">pref_hardware_config_filename</string>
    <string name="pref_launch_autoconfigure">pref_launch_autoconfigure</string>
    <string name="pref_launch_configure">pref_launch_configure</string>
    <string name="pref_launch_settings">pref_launch_settings</string>
    <string name="pref_log_network_traffic_key">pref_log_network_traffic</string>
    <string name="pref_log_network_traffic_summary">Save network data to logs; this will generate a large volume of logs</string>
    <string name="pref_log_network_traffic_title">Log Network Traffic</string>
    <string name="pref_logging_title">Logging</string>
    <string name="pref_pair_rc_summary">Change the Robot Controller this Driver Station is paired with.</string>
    <string name="pref_pair_rc_title">Pair with Robot Controller</string>
    <string name="pref_wifi_channel_selection_title">Wifi Channel Selection</string>
    <string name="pref_wifi_config_title">Wifi Direct Configuration</string>
    <string name="readXML_text">Select an XML file to instantiate a Robot from that file</string>
    <string name="restore_settings">Restore Saved WiFi Settings</string>
    <string name="row_port0">0</string>
    <string name="row_port1">1</string>
    <string name="row_port2">2</string>
    <string name="row_port3">3</string>
    <string name="row_port4">4</string>
    <string name="row_port5">5</string>
    <string name="row_port6">6</string>
    <string name="save_button">Save</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="scan">Scan</string>
    <string name="scanButton_text">Press this button to scan for attached devices</string>
    <string name="servo_controller_name">Servo Controller</string>
    <string name="servo_controller_name_prompt">Enter the name for this servo controller here</string>
    <string name="servo_name_prompt">Servo name</string>
    <string name="settings_activity">Settings</string>
    <string name="titleText_view">Device type</string>
    <string name="title_activity_autoconfigure">Autoconfigure Robot</string>
    <string name="title_activity_config_wifi_direct">Configure Wifi Direct</string>
    <string name="title_activity_load">Load Configuration File</string>
    <string name="title_activity_settings">FTC Driver Station Settings</string>
    <string name="title_activity_wifi_channel_selector">Wifi Channel Selection</string>
    <string name="user1_label">User 1</string>
    <string name="user2_label">User 2</string>
    <string name="view_logs_activity">View Logs</string>
    <string name="wifi_direct_device_none">none - do not pair</string>
    <string name="wifi_direct_devices">Wifi Direct Devices:</string>
    <string name="wifi_direct_label">Wifi Direct:</string>
    <string name="wifi_direct_update_settings">Please wait while we update the Wifi Direct settings on this device.</string>
    <string name="writeXML_prompt">Select an XML file to instantiate a Robot from that file</string>
    <string name="writeXML_text">Press this button to write the current configuration to an XML file</string>
</resources>
