<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1">
    <include android:id="@id/included_header" layout="@layout/header" />
    <RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="-1" android:layout_height="-2">
        <Button android:layout_gravity="1" android:id="@id/device_interface_module_saveButton" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="5dp" android:text="@string/done_button" android:onClick="saveLegacyController" android:layout_marginEnd="5dp" />
        <Button android:layout_gravity="1" android:id="@id/device_interface_module_cancelButton" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="5dp" android:text="@string/cancel" android:layout_toRightOf="@id/device_interface_module_saveButton" android:onClick="cancelLegacyController" android:layout_marginEnd="5dp" android:layout_toEndOf="@id/device_interface_module_saveButton" />
    </RelativeLayout>
    <View android:background="0x1060000" android:layout_width="-1" android:layout_height="2dp" />
    <ScrollView android:layout_width="-1" android:layout_height="-2">
        <LinearLayout android:orientation="1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-2" android:keepScreenOn="true">
            <EditText android:textSize="18sp" android:textStyle="1" android:id="@id/device_interface_module_name" android:layout_width="-1" android:layout_height="-2" android:text="@string/legacy_controller_name" android:hint="@string/name_prompt_text" android:maxLength="200" android:inputType="1" />
            <TextView android:id="@id/legacy_serialNumber" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="8dp" android:layout_marginStart="8dp" />
            <TextView android:id="@id/controller_name_text" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="30dp" android:text="@string/legacy_controller_name" />
            <View android:background="#ff0000" android:layout_width="-1" android:layout_height="2dp" />
            <TableLayout android:id="@id/tableLayout_pwm_devices" android:layout_width="-1" android:layout_height="-1" android:stretchColumns="1" android:shrinkColumns="0">
                <TableRow android:id="@id/table_header" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="14sp" android:textStyle="1" android:id="@id/port_title" android:paddingLeft="5dp" android:paddingRight="10dp" android:text="@string/port" android:paddingEnd="10dp" />
                    <TextView android:textSize="14sp" android:textStyle="1" android:id="@id/attached_title" android:text="@string/device_info" />
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port0" android:padding="5dp" android:layout_width="-1" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port0" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port0" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout0" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port1" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port1" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port1" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout1" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port2" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port2" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port2" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout2" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port3" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port3" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port3" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout3" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port4" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port4" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port4" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout4" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <TableRow android:id="@id/row_port5" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="22sp" android:textStyle="1" android:id="@id/port5" android:paddingLeft="5dp" android:paddingRight="5dp" android:text="@string/row_port5" android:paddingEnd="5dp" />
                    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
                        <LinearLayout android:orientation="1" android:id="@id/linearLayout5" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                    </RelativeLayout>
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
