<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1">
    <include android:id="@id/included_header" layout="@layout/header" />
    <RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="-1" android:layout_height="-2">
        <Button android:layout_gravity="1" android:id="@id/servo_controller_saveButton" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="5dp" android:text="@string/done_button" android:onClick="saveServoController" android:layout_marginEnd="5dp" />
        <Button android:layout_gravity="1" android:id="@id/servo_controller_cancelButton" android:layout_width="-2" android:layout_height="-2" android:layout_marginRight="5dp" android:text="@string/cancel" android:layout_toRightOf="@id/servo_controller_saveButton" android:onClick="cancelServoController" android:layout_marginEnd="5dp" android:layout_toEndOf="@id/servo_controller_saveButton" />
    </RelativeLayout>
    <View android:background="0x1060000" android:layout_width="-1" android:layout_height="2dp" />
    <ScrollView android:layout_width="-1" android:layout_height="-2">
        <LinearLayout android:orientation="1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-2" android:keepScreenOn="true">
            <EditText android:textSize="18sp" android:textStyle="1" android:id="@id/servocontroller_name" android:layout_width="-1" android:layout_height="-2" android:text="@string/servo_controller_name" android:hint="@string/name_prompt_text" android:maxLength="200" android:inputType="1" />
            <TextView android:id="@id/servo_controller_serialNumber" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="8dp" android:layout_marginStart="8dp" />
            <TextView android:id="@id/controller_name_text" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="30dp" android:text="@string/servo_controller_name_prompt" />
            <View android:background="#ff0000" android:layout_width="-1" android:layout_height="2dp" />
            <TableLayout android:id="@id/tableLayout_pwm_devices" android:layout_width="-1" android:layout_height="-1">
                <TableRow android:id="@id/table_header" android:padding="5dp" android:layout_width="-2" android:layout_height="-2">
                    <TextView android:textSize="12sp" android:textStyle="1" android:id="@id/port_title" android:paddingLeft="5dp" android:paddingRight="10dp" android:text="@string/port" android:paddingEnd="5dp" />
                    <TextView android:textSize="12sp" android:textStyle="1" android:id="@id/attached_title" android:text="@string/attached" />
                </TableRow>
                <View android:background="#ff0000" android:layout_height="2dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo1" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo2" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo3" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo4" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo5" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
                <LinearLayout android:orientation="1" android:id="@id/linearLayout_servo6" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" />
            </TableLayout> />
    </ScrollView> />
